<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"



    android:paddingTop="10dp"
    tools:context="com.example.cata.practice.MainActivity"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <com.example.cata.practice.CustomTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/kmValue"
        android:text="101.4"
        android:textSize="80dp"
        android:textColor="@color/colorRed"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        app:font= "@string/ben_krush"
        />

    <com.example.cata.practice.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/kmValue"
        android:id="@+id/description"
        android:text="@string/description"
        android:textSize="25dp"
        android:textColor="@color/dark"

        app:font= "@string/tabassom_narmal"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/description"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:id="@+id/values"


        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            >

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/transit_transfer"
                />

            <com.example.cata.practice.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/value"
                android:text="10"
                android:textSize="25dp"
                app:font= "@string/ben_krush"
                android:textColor="@color/dark"
                />


            <com.example.cata.practice.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textRun"
                android:text="Total runs"
                android:textSize="20dp"
                app:font= "@string/tabassom_narmal"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginLeft="7dp"
            >

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/watch"
                />

            <com.example.cata.practice.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="7'05"
                android:textSize="25dp"
                app:font= "@string/ben_krush"
                android:textColor="@color/dark"
                />


            <com.example.cata.practice.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="Avg race"
                app:font= "@string/tabassom_narmal"
                android:textSize="20dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"

            android:layout_marginLeft="7dp"
            >

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/loupe"
                />

            <com.example.cata.practice.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                app:font= "@string/ben_krush"

                android:text="1923"
                android:textSize="25dp"
                android:textColor="@color/dark"
                />


            <com.example.cata.practice.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:font= "@string/tabassom_narmal"

                android:text="Avg nikefuel"
                android:textSize="20dp"
                />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"

        android:layout_height="150dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/values"
        android:background="@color/mediumGray"
        android:id="@+id/borders"
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        >


    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/dataAndButton"
        android:layout_height="wrap_content"
        android:layout_below="@id/values"
        android:orientation="horizontal"
        android:layout_margin="3dp"
        android:layout_marginLeft="22dp"
        android:layout_marginRight="22dp"

        >

        <com.example.cata.practice.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="November 2015"
            android:textSize="65px"
            app:font="@string/roman_italic"
            android:layout_centerInParent="true"
           />


        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/chevron_right_medium"
            android:layout_marginRight="21dp"
            android:background="@color/mediumGray"
            android:layout_alignParentRight="true"
            />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:id="@+id/imageScore"

            android:layout_below="@id/dataAndButton"
            android:background="@color/white"
            android:layout_marginLeft="03dp"
            android:layout_marginRight="03dp"

            >

            <com.example.cata.practice.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_marginLeft="2dp"
                app:font= "@string/tabassom_narmal"
                android:text="01"
                android:textSize="80px"
                android:textColor="@color/colorRed"
                />

            <com.github.ivbaranov.mli.MaterialLetterIcon
                android:layout_width="@dimen/letter_icon_size"
                android:layout_height="50dp"
                app:mli_shape_type="circle"
                app:mli_shape_color="@color/colorRed"
                app:mli_letter="M"
                app:mli_letters_number="1"
                app:mli_letter_size="30"
                app:font="@string/ben_krush"
                app:mli_initials="false"
                android:padding="2dp"
                android:layout_marginLeft="7dp"
                android:layout_weight="0.01" />

            <com.example.cata.practice.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:font="@string/ben_krush"
                android:text="You"
                android:textColor="@color/colorRed"
                android:textSize="20dp"

                android:gravity="center"/>

            <com.example.cata.practice.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:font="@string/ben_krush"
                android:text="44,36 KM"
                android:textColor="@color/colorRed"
                android:textSize="20dp"
                android:layout_marginLeft="50dp"
                android:gravity="center"/>

        </LinearLayout>



    <com.example.cata.practice.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_marginBottom="3dp"
        android:layout_marginTop="3dp"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"

        android:padding="12dp"

        android:background="@color/white"
        app:font= "@string/tabassom_narmal"
        android:textColor="@color/dark"

        android:text="@string/text_cell"
        android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/borders"
        android:layout_marginTop="50dp"
        android:background="@color/colorRed"
        android:gravity="center"
        >


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/run"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="match_parent"

        android:background="@color/colorRed"
        android:textColor="@color/white"
        android:text="BEGIN RUN"
        android:textSize="20dp"

        />
    </LinearLayout>


</RelativeLayout>
